--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "preserve",
+    "noEmit": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
